// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/theme should generate accessible palette for dark primary 1`] = `
Object {
  "base": Object {
    "background": "#fff",
    "backgroundActive": "#e8e8e8",
    "backgroundHover": "#f4f4f4",
    "border": "#bcbcbc",
    "buttonBackground": "#fff",
    "buttonBackgroundActive": "#e8e8e8",
    "buttonBackgroundHover": "#f4f4f4",
    "buttonBorder": "#bcbcbc",
    "buttonBorderActive": "#bcbcbc",
    "buttonBorderHover": "#bcbcbc",
    "buttonForeground": "#000",
    "foreground": "#222",
    "gridUnitPx": 4,
    "progressBarBackground": "#a7a7a7",
    "scrollShadowRgba": "rgba(0, 0, 0, 0.12)",
  },
  "modes": Object {
    "admin": Object {},
    "dark": Object {},
  },
  "primary": Object {
    "_debug": Object {
      "colorRange": "vDark",
    },
    "background": "#000000",
    "backgroundActive": "#262626",
    "backgroundGradient": "#1a1a1a",
    "backgroundHover": "#1a1a1a",
    "border": "#000000",
    "buttonBackground": "#000000",
    "buttonBackgroundActive": "#262626",
    "buttonBackgroundHover": "#1a1a1a",
    "buttonBorder": "#000000",
    "buttonBorderActive": "#262626",
    "buttonBorderHover": "#1a1a1a",
    "buttonForeground": "#fff",
    "foreground": "#fff",
    "progressBarBackground": "#1a1a1a",
    "scrollShadowRgba": "rgba(0, 0, 0, 0.4)",
  },
}
`;

exports[`components/theme should generate accessible palette for light primary 1`] = `
Object {
  "base": Object {
    "background": "#fff",
    "backgroundActive": "#e8e8e8",
    "backgroundHover": "#f4f4f4",
    "border": "#bcbcbc",
    "buttonBackground": "#fff",
    "buttonBackgroundActive": "#e8e8e8",
    "buttonBackgroundHover": "#f4f4f4",
    "buttonBorder": "#bcbcbc",
    "buttonBorderActive": "#bcbcbc",
    "buttonBorderHover": "#bcbcbc",
    "buttonForeground": "#000",
    "foreground": "#222",
    "gridUnitPx": 4,
    "progressBarBackground": "#a7a7a7",
    "scrollShadowRgba": "rgba(0, 0, 0, 0.12)",
  },
  "modes": Object {
    "admin": Object {},
    "dark": Object {},
  },
  "primary": Object {
    "_debug": Object {
      "colorRange": "vLight",
    },
    "background": "#ffffff",
    "backgroundActive": "#ebebeb",
    "backgroundGradient": "#f2f2f2",
    "backgroundHover": "#f5f5f5",
    "border": "#e8e8e8",
    "buttonBackground": "#222",
    "buttonBackgroundActive": "#767676",
    "buttonBackgroundHover": "#4e4e4e",
    "buttonBorder": "#222",
    "buttonBorderActive": "#767676",
    "buttonBorderHover": "#4e4e4e",
    "buttonForeground": "#fff",
    "foreground": "#000",
    "progressBarBackground": "#909090",
    "scrollShadowRgba": "rgba(0, 0, 0, 0.08)",
  },
}
`;

exports[`components/theme should generate accessible palette for midtone grey 1`] = `
Object {
  "base": Object {
    "background": "#fff",
    "backgroundActive": "#e8e8e8",
    "backgroundHover": "#f4f4f4",
    "border": "#bcbcbc",
    "buttonBackground": "#fff",
    "buttonBackgroundActive": "#e8e8e8",
    "buttonBackgroundHover": "#f4f4f4",
    "buttonBorder": "#bcbcbc",
    "buttonBorderActive": "#bcbcbc",
    "buttonBorderHover": "#bcbcbc",
    "buttonForeground": "#000",
    "foreground": "#222",
    "gridUnitPx": 4,
    "progressBarBackground": "#a7a7a7",
    "scrollShadowRgba": "rgba(0, 0, 0, 0.12)",
  },
  "modes": Object {
    "admin": Object {},
    "dark": Object {},
  },
  "primary": Object {
    "_debug": Object {
      "colorRange": "midDark",
    },
    "background": "#6a6c6e",
    "backgroundActive": "#565859",
    "backgroundGradient": "#5d5f61",
    "backgroundHover": "#606264",
    "border": "#6a6c6e",
    "buttonBackground": "#6a6c6e",
    "buttonBackgroundActive": "#565859",
    "buttonBackgroundHover": "#606264",
    "buttonBorder": "#6a6c6e",
    "buttonBorderActive": "#565859",
    "buttonBorderHover": "#606264",
    "buttonForeground": "#fff",
    "foreground": "#fff",
    "progressBarBackground": "#606264",
    "scrollShadowRgba": "rgba(0, 0, 0, 0.12)",
  },
}
`;

exports[`components/theme should generate accessible palette using color string 1`] = `
Object {
  "base": Object {
    "background": "#fff",
    "backgroundActive": "#e8e8e8",
    "backgroundHover": "#f4f4f4",
    "border": "#bcbcbc",
    "buttonBackground": "#fff",
    "buttonBackgroundActive": "#e8e8e8",
    "buttonBackgroundHover": "#f4f4f4",
    "buttonBorder": "#bcbcbc",
    "buttonBorderActive": "#bcbcbc",
    "buttonBorderHover": "#bcbcbc",
    "buttonForeground": "#000",
    "foreground": "#222",
    "gridUnitPx": 4,
    "progressBarBackground": "#a7a7a7",
    "scrollShadowRgba": "rgba(0, 0, 0, 0.12)",
  },
  "modes": Object {
    "admin": Object {},
    "dark": Object {},
  },
  "primary": Object {
    "_debug": Object {
      "colorRange": "midLight",
    },
    "background": "#ffc0cb",
    "backgroundActive": "#ff738c",
    "backgroundGradient": "#ff8da1",
    "backgroundHover": "#fff3f5",
    "border": "#e8e8e8",
    "buttonBackground": "#222",
    "buttonBackgroundActive": "#767676",
    "buttonBackgroundHover": "#4e4e4e",
    "buttonBorder": "#222",
    "buttonBorderActive": "#767676",
    "buttonBorderHover": "#4e4e4e",
    "buttonForeground": "#fff",
    "foreground": "#000",
    "progressBarBackground": "#909090",
    "scrollShadowRgba": "rgba(0, 0, 0, 0.08)",
  },
}
`;

exports[`components/theme should generate box brand colors and merge into base theme 1`] = `
Object {
  "base": Object {
    "background": "#fff",
    "backgroundActive": "#e8e8e8",
    "backgroundHover": "#f4f4f4",
    "border": "#bcbcbc",
    "buttonBackground": "#fff",
    "buttonBackgroundActive": "#e8e8e8",
    "buttonBackgroundHover": "#f4f4f4",
    "buttonBorder": "#bcbcbc",
    "buttonBorderActive": "#bcbcbc",
    "buttonBorderHover": "#bcbcbc",
    "buttonForeground": "#000",
    "foreground": "#222",
    "gridUnitPx": 4,
    "progressBarBackground": "#a7a7a7",
    "scrollShadowRgba": "rgba(0, 0, 0, 0.12)",
  },
  "modes": Object {
    "admin": Object {},
    "dark": Object {},
  },
  "primary": Object {
    "_debug": Object {
      "colorRange": "midDark",
    },
    "background": "#0061d5",
    "backgroundActive": "#004eac",
    "backgroundGradient": "#0055bc",
    "backgroundHover": "#006ae9",
    "border": "#0061d5",
    "buttonBackground": "#0061d5",
    "buttonBackgroundActive": "#004eac",
    "buttonBackgroundHover": "#006ae9",
    "buttonBorder": "#0061d5",
    "buttonBorderActive": "#004eac",
    "buttonBorderHover": "#006ae9",
    "buttonForeground": "#fff",
    "foreground": "#fff",
    "progressBarBackground": "#006ae9",
    "scrollShadowRgba": "rgba(0, 0, 0, 0.12)",
  },
}
`;
